# substrate-node-template-copy

./: .gitignore  Cargo.toml  README.md  analysis-crate-by-crate.md  cg-config.json  dependency-tree.txt  note.md  run-rupta.sh  rust-toolchain.toml  syscall_trace.txt
.cargo/: config
node/: build.rs  run-mirai.sh  tree.txt
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/collectibles/src/: lib.rs
pallets/nicks/: Cargo.toml
pallets/nicks/src/: lib.rs
pallets/template/: Cargo.toml  tree.txt
runtime/: Cargo.toml
runtime/src/: lib.rs
